# apps/openapi/openapi.json
@@ -1283,6 +1283,72 @@
         ]
       }
     },
+    "/api/files/{fileId}/content": {
+      "get": {
+        "operationId": "filesServiceGetFileContent",
+        "description": "Get the content of a specific file by its unique identifier.",
+        "parameters": [
+          {
+            "name": "fileId",
+            "in": "path",
+            "description": "The unique identifier of the file to retrieve content for",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "x-oapi-codegen-extra-tags": {
+              "validate": "required"
+            }
+          }
+        ],
+        "responses": {
+          "302": {
+            "description": "Redirection",
+            "headers": {
+              "Location": {
+                "required": true,
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access is unauthorized.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CommonErrorError401"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "The server cannot find the requested resource.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CommonErrorError404"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CommonErrorError500"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Files"
+        ]
+      }
+    },
     "/api/notes": {
       "post": {
         "operationId": "notesServiceCreateNote",
@@ -2642,6 +2708,20 @@
             "x-oapi-codegen-extra-tags": {
               "validate": "required"
             }
+          },
+          "width": {
+            "type": "integer",
+            "nullable": true,
+            "x-oapi-codegen-extra-tags": {
+              "validate": "omitempty"
+            }
+          },
+          "height": {
+            "type": "integer",
+            "nullable": true,
+            "x-oapi-codegen-extra-tags": {
+              "validate": "omitempty"
+            }
           }
         },
         "required": [
@@ -2682,6 +2762,20 @@
             "type": "string",
             "x-oapi-codegen-extra-tags": {
               "validate": "required"
+            }
+          },
+          "width": {
+            "type": "integer",
+            "nullable": true,
+            "x-oapi-codegen-extra-tags": {
+              "validate": "omitempty"
+            }
+          },
+          "height": {
+            "type": "integer",
+            "nullable": true,
+            "x-oapi-codegen-extra-tags": {
+              "validate": "omitempty"
             }
           }
         },
